@@ -1,10 +1,10 @@
 Feature: site
 
   Scenario: Site Clone Environment
-    @vcr site-clone-env
+    @vcr site-clone-content
     Given I am authenticated
     And a site named "[[test_site_name]]"
-    When I run "terminus site clone-env --site=[[test_site_name]] --from-env=test --to-env=dev --files --db --yes"
+    When I run "terminus site clone-content --site=[[test_site_name]] --from-env=test --to-env=dev --yes"
     Then I should get:
     """
     Cloning database
