@@ -18,6 +18,7 @@ All notable changes to this project starting with the 0.6.0 release will be docu
 - `site wipe` asks for confirmation (#382)
 - `backup get` will not offer in-progress/incomplete backups for download (#386)
 - `backup list` identifies 0-byte backups as "Incomplete" (#386)
+- `site clone-env` is now `site clone-content`. Flags have changed from inclusive --db and --files to exclusive --db-only and --files-only and defaults to cloning both. (#403)
 
 ### Deprecated
 - `sites delete` will be removed in v1.0.0 (#370)
